v8/tests/messages/regression-1201933-1.out
regression-1201933-1.js:7: Uncaught TypeError: const 'a' has already been declared
  var a;
      ^
