v8/tests/messages/regression-1201933-1.js
// This is okay.
function foo() { const a; var a; }

// This isn't.
(function () {
  const a;
  var a;
})();
